Fixed spacing between back button and title

--- a/src/app/components/HeaderMenu/styles.css
+++ b/src/app/components/HeaderMenu/styles.css
@@ -20,7 +20,6 @@
 
 .NLT__header-menu-header {
 	font-weight: 700;
-	padding-left: 5px;
 }
 
 .NLT__header-menu-item {
